<resources>
    <string name="app_name">출결 체크</string>

    <!-- app_version -->
    <string name="app_version">1.0.0</string>

    <!-- activity_login -->
    <string name="login_error_label">아이디 및 비밀번호를 확인해주세요.</string>
    <string name="login_title_label">로그인</string>
    <string name="login_btn_label">이메일로 로그인</string>
    <string name="login_signup_label">회원가입</string>
    <string name="login_id_find_label">계정 찾기</string>
    <string name="login_sns_label">소셜로 간편가입</string>

    <!-- plain_label -->
    <string name="plain_id">아이디</string>
    <string name="plain_email">이메일</string>
    <string name="plain_password">비밀번호</string>
    <string name="plain_nickname">닉네임</string>
    <string name="plain_group_name">그룹 이름</string>
    <string name="plain_name">이름</string>
    <string name="plain_number">휴대전화번호</string>
    <string name="plain_number2">비상연락망</string>
    <string name="plain_address">주소</string>
    <string name="plain_address2">상세주소</string>
    <string name="plain_cancel">취소</string>
    <string name="plain_create">생성</string>
    <string name="plain_remove">삭제</string>
    <string name="plain_memo">메모</string>
    <string name="plain_more">더보기</string>
    <string name="plain_choice">선택</string>
    <string name="plain_confirm">확인</string>
    <string name="plain_save">저장</string>
    <string name="plain_account">계정</string>
    <string name="plain_other">기타</string>
    <string name="plain_logout">로그아웃</string>

    <!-- modify_label -->
    <string name="modify_group_name">그룹 이름(수정)</string>
    <string name="modify_name">이름(수정)</string>
    <string name="modify_number">휴대전화번호(수정)</string>
    <string name="modify_number2">비상연락망(수정)</string>
    <string name="modify_address">주소(수정)</string>
    <string name="modify_address2">상세주소(수정)</string>
    <string name="modify_memo">메모(수정)</string>

    <!-- activity_signup -->
    <string name="signup_title_label">회원 가입</string>
    <string name="signup_birth_label">생년월일 8자리</string>
    <string name="signup_male_label">남자</string>
    <string name="signup_btn_female_label">여자</string>
    <string name="signup_btn_none_label">선택안함</string>
    <string name="signup_request_label">인증요청</string>

    <!-- activity_withdrawal_app -->
    <string name="withdrawal_app_title_label">회원 탈퇴</string>
    <string name="withdrawal_app_reason_hint">서비스 탈퇴 사유에 대해 알려주세요.\n고객님의 소중한 피드백을 담아\n더 나은 서비스로 보답 드리도록 하겠습니다.</string>
    <string name="withdrawal_app_question1">지금 탈퇴하시면 출석체크를 더 이상 이용하실 수 없습니다.</string>
    <string name="withdrawal_app_question2">탈퇴 후에는 앱에 기록한 모든 정보가 삭제됩니다. 또한 복수 할 수 없습니다.</string>
    <string name="withdrawal_app_agree">회원 탈퇴 유의사항을 확인하였으며 동의합니다.</string>
    <string name="withdrawal_app_top_label">님 \n정말 탈퇴하시겠어요?</string>
    <string name="withdrawal_app_bottom_label">떠나시는 이유를 알려주세요.</string>
    <string name="withdrawal_app_error_msg">체크박스를 확인해주세요</string>
    <string name="fragment_withdrawal_btn_label">탈퇴하기</string>

    <!-- activity_changePW -->
    <string name="change_password_title_label">비밀번호 변경</string>

    <!-- activity_find_account -->
    <string name="find_account_title_label">계정 찾기</string>
    <string name="find_account_key_label">인증번호</string>

    <!-- dialog_add_group -->
    <string name="dialog_add_group_title_label">그룹 생성하기</string>

    <!-- dialog_delete -->
    <string name="dialog_delete_title_label">삭제하기</string>
    <string name="dialog_delete_warning_label">삭제 후 되돌릴 수 없습니다!!!</string>
    <string name="dialog_tv_script">그룹에 소속되어있는 멤버의 정보도 함께 삭제됩니다.</string>

    <!-- dialog_logout -->
    <string name="dialog_logout_title_label">로그아웃</string>
    <string name="dialog_logout_label">로그아웃 하시겠습니까?\n로그인 정보가 삭제 됩니다.</string>

    <!-- dialog_search -->
    <string name="dialog_search_label">그룹을 검색하거나 선택하세요.</string>

    <!-- 프래그먼트 타이틀 -->
    <string name="fragment_chart_title">출결 통계</string>
    <string name="fragment_check_title">출결 체크</string>
    <string name="fragment_edit_title">그룹 조회</string>
    <string name="fragment_member_add_title">멤버 추가</string>
    <string name="fragment_member_info_title">상세 정보</string>
    <string name="fragment_member_modify_title">멤버 수정</string>
    <string name="fragment_member_view_title">멤버 조회</string>

    <!-- 메뉴 출결 관리 -->
    <string name="menu_check">출결</string>
    <string name="menu_chart">통계</string>
    <string name="menu_edit">관리</string>

    <!-- 체크 프래그먼트 -->
    <string name="fragment_check_iv_script">textView안에 있는 화살표</string>

    <!-- 멤버 추가 프래그먼트 -->
    <string name="fragment_member_add_name_hint">이름 (필수)</string>
    <string name="fragment_member_add_number_hint">전화번호 (필수)</string>
    <string name="fragment_member_add_number2_hint">비상연락망 (필수)</string>
    <string name="fragment_member_add_address_hint">주소 (필수)</string>
    <string name="fragment_member_add_address2_hint">상세 주소(필수)</string>
    <string name="fragment_member_add_memo_hint">메모</string>
    <string name="fragment_member_add_address2_error">상세 주소를 입력해주세요</string>
    <string name="fragment_member_add_address_error">주소를 입력해주세요</string>
    <string name="fragment_member_add_number2_error">비상연락망을 입력해주세요</string>
    <string name="fragment_member_add_number_error">전화번호를 입력해주세요</string>
    <string name="fragment_member_add_name_error">이름을 입력해주세요</string>


    <!-- 더보기 프래그먼트 -->
    <string name="fragment_more_change_pw_label">비밀번호 변경</string>
    <string name="fragment_more_info_label">이용 안내</string>
    <string name="fragment_more_app_version_label">앱 버전</string>
    <string name="fragment_more_notice_label">공지사항</string>
    <string name="fragment_more_term_of_service_label">서비스 이용약관</string>
    <string name="fragment_more_personal_info_label">개인정보 처리방침</string>
    <string name="fragment_more_youth_protection_policy_label">청소년 보호정책</string>
    <string name="fragment_more_open_source_label">오픈소스 라이선스</string>
    <string name="fragment_more_other_info_consent_label">정보 동의 설정</string>
    <string name="fragment_more_withdrawal_label">회원탈퇴</string>

    <!-- 에러 메세지 -->
    <string name="error_msg_no_name">이름을 확인해 주세요.</string>
    <string name="error_msg_no_number">전화번호를 확인해 주세요.</string>
    <string name="error_msg_no_address">주소를 확인해 주세요.</string>
    <string name="error_msg_no_member">멤버가 없습니다.</string>
    <string name="error_msg_no_group">그룹이 없습니다.</string>
    <string name="error_msg_over_name">이름은 10글자 이내로 작성해 주세요.</string>


    <!-- 기본 메세지 -->
    <string name="common_choice_group">그룹을 선택해 주세요</string>
    <string name="common_move_call">전화 창으로 이동합니다.</string>
    <string name="common_move">이동</string>

    <!-- 아이디 및 비밀번호 찾기 -->
    <string name="find_account_certification_number_send">인증번호발송</string>
    <string name="find_account_certification_number">인증 번호</string>
    <string name="find_account_top_label">회원정보에 등록한 휴대전화로 인증</string>
    <string name="find_account_bottom_label">본인확인 이메일로 인증</string>
    <string name="fragment_check_attendance">출석</string>
    <string name="fragment_check_tardy">지각</string>
    <string name="fragment_check_absent">결석</string>

    <!-- 애드옵스 -->
    <string name="my_ad_banner">ca-app-pub-2295399199407201/6153256751</string>
    <string name="my_ad_front">ca-app-pub-2295399199407201/2274933913</string>


</resources>