<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentmain.MoreFragment">


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/my_ad_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/plain_more"
        app:titleCentered="true"
        app:titleTextAppearance="@style/AppToolbarText.S24" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_more">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view_id"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/view_more_background"
                app:layout_constraintBottom_toBottomOf="@id/tv_password_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_account_label"
                style="@style/AppEditText.Bold.More.S24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plain_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_id" />

            <TextView
                android:id="@+id/tv_id_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plain_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_account_label" />

            <TextView
                android:id="@+id/tv_id"
                style="@style/AppEditText.Hint.S16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_id_label"
                app:layout_constraintEnd_toEndOf="@id/view_id"
                app:layout_constraintTop_toTopOf="@id/tv_id_label" />

            <TextView
                android:id="@+id/tv_password_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/fragment_more_change_pw_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_id_label" />

            <View
                android:id="@+id/view_app_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/view_more_background"
                app:layout_constraintBottom_toBottomOf="@id/tv_app_open_source_license_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_id" />

            <TextView
                android:id="@+id/tv_app_info_label"
                style="@style/AppEditText.Bold.More.S24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_info_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_app_info" />

            <TextView
                android:id="@+id/tv_app_version_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_app_version_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_info_label" />

            <TextView
                style="@style/AppEditText.Hint.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/app_version"
                app:layout_constraintBottom_toBottomOf="@id/tv_app_version_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_app_version_label" />

            <TextView
                android:id="@+id/tv_app_notice_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_notice_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_version_label" />

            <TextView
                android:id="@+id/tv_app_term_of_service_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_term_of_service_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_notice_label" />

            <TextView
                android:id="@+id/tv_app_personal_info_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_personal_info_label"
                android:paddingBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_term_of_service_label" />

            <TextView
                android:id="@+id/tv_app_youth_protection_policy_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_youth_protection_policy_label"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_personal_info_label" />

            <TextView
                android:id="@+id/tv_app_open_source_license_label"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/fragment_more_open_source_label"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_youth_protection_policy_label" />

            <View
                android:id="@+id/view_other_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_more_background"
                app:layout_constraintBottom_toBottomOf="@id/tv_other_logout"
                app:layout_constraintEnd_toEndOf="@id/view_app_info"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/view_app_info"
                app:layout_constraintTop_toBottomOf="@id/view_app_info" />

            <TextView
                android:id="@+id/tv_other_label"
                style="@style/AppEditText.Bold.More.S24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plain_other"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_other_label" />

            <TextView
                android:id="@+id/tv_other_info_consent_statement"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_other_info_consent_label"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_other_label" />

            <TextView
                android:id="@+id/tv_withdrawal_app"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_more_withdrawal_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_other_info_consent_statement" />

            <TextView
                android:id="@+id/tv_other_logout"
                style="@style/AppEditText.More.S17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/plain_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_app" />

            <!--하단 빈공간-->
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_other_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>