<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_withdrawal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_menu_close"
        app:title="@string/withdrawal_app_title_label"
        app:titleCentered="true"
        app:titleTextAppearance="@style/AppEditText.Bold.S24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_withdrawal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tv_withdrawal_name"
                style="@style/AppEditText.Bold.S24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/withdrawal_app_top_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_withdrawal_question"
                style="@style/AppEditText.S17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="10dp"
                android:text="@string/withdrawal_app_question1"
                app:layout_constraintEnd_toEndOf="@id/tv_withdrawal_name"
                app:layout_constraintStart_toStartOf="@id/tv_withdrawal_name"
                app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_name" />

            <TextView
                android:id="@+id/tv_withdrawal_question2"
                style="@style/AppEditText.S17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="10dp"
                android:text="@string/withdrawal_app_question2"
                app:layout_constraintEnd_toEndOf="@id/tv_withdrawal_question"
                app:layout_constraintStart_toStartOf="@id/tv_withdrawal_question"
                app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_question" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_withdrawal"
                style="@style/AppEditText.S14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/withdrawal_app_agree"
                app:layout_constraintStart_toStartOf="@id/tv_withdrawal_question2"
                app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_question2" />

            <TextView
                android:id="@+id/tv_error_checkbox"
                style="@style/AppEditText.Red.S14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawal_app_error_msg"
                android:layout_marginStart="35dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/cb_withdrawal"
                app:layout_constraintTop_toBottomOf="@id/cb_withdrawal" />


            <TextView
                android:id="@+id/tv_withdrawal_question3"
                style="@style/AppEditText.Bold.S24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:text="@string/withdrawal_app_bottom_label"
                app:layout_constraintEnd_toEndOf="@id/cb_withdrawal"
                app:layout_constraintStart_toStartOf="@id/cb_withdrawal"
                app:layout_constraintTop_toBottomOf="@id/tv_error_checkbox" />

            <EditText
                android:id="@+id/et_withdrawal_reason"
                style="@style/AppEditText.S17"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/plain_outline_background"
                android:gravity="left|top"
                android:hint="@string/withdrawal_app_reason_hint"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_question3"
                app:layout_goneMarginStart="30dp"
                app:layout_goneMarginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_withdrawal"
                style="@style/AppEditText.White.S20"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector"
                android:text="@string/fragment_withdrawal_btn_label"
                app:layout_constraintEnd_toEndOf="@id/et_withdrawal_reason"
                app:layout_constraintStart_toStartOf="@id/et_withdrawal_reason"
                app:layout_constraintTop_toBottomOf="@id/et_withdrawal_reason" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>